0.5.1	UNRELEASED

 BUG FIXES
 
  * Fix ReceivePackHandler to disallow removing refs without delete-refs.
    (Dave Borowitz)

  * Deal with capabilities required by the client, even if they 
    can not be disabled in the server. (Dave Borowitz)

 FEATURES

  * Add include-tag capability to server. (Dave Borowitz)

 TESTS

  * Add framework for testing compatibility with C Git. (Dave Borowitz)

0.5.0	2010-03-03

 BUG FIXES

  * Support custom fields in commits.

  * Improved ref handling. (Dave Borowitz)

  * Rework server protocol to be smarter and interoperate with cgit client.
    (Dave Borowitz)

  * Add a GitFile class that uses the same locking protocol for writes as 
    cgit. (Dave Borowitz)

  * Cope with forward slashes correctly in the index on Windows.
    (Jelmer Vernooij, #526793)

 FEATURES

  * --pure option to setup.py to allow building/installing without the C 
    extensions. (Hal Wine, Anatoly Techtonik, Jelmer Vernooij, #434326)

  * Implement Repo.get_config(). (Jelmer Vernooij, Augie Fackler)

  * HTTP dumb and smart server. (Dave Borowitz)

  * Add abstract baseclass for Repo that does not require file system 
    operations. (Dave Borowitz)

0.4.1	2010-01-03

 FEATURES

  * Add ObjectStore.iter_tree_contents()

  * Add Index.changes_from_tree()

  * Add ObjectStore.tree_changes()

  * Add functionality for writing patches in dulwich.patch.

0.4.0	2009-10-07

 DOCUMENTATION

  * Added tutorial.

 API CHANGES

  * dulwich.object_store.tree_lookup_path will now return the mode and 
    sha of the object found rather than the object itself.

 BUG FIXES

  * Use binascii.hexlify / binascii.unhexlify for better performance.

  * Cope with extra unknown data in index files by ignoring it (for now).

  * Add proper error message when server unexpectedly hangs up. (#415843)

  * Correctly write opcode for equal in create_delta.

0.3.3	2009-07-23

 FEATURES

  * Implement ShaFile.__hash__().

  * Implement Tree.__len__()

 BUG FIXES
  